test/ingress/s.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: ingress-nginx
  labels:
    service: hello
spec:
  selector:
    app: k8s-in-action
  ports:
    - port: 80
      targetPort: 8080
